# CLASSIC-Fallout4

./: .cursorignore  .cursorindexingignore  .env.example  .gitattributes  .gitignore  .gitmodules  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  CLASSIC Changelog.md  CLASSIC Technical Debt Analysis Report.md  CLASSIC-CLI.spec  CLASSIC-GUI-OneFile.spec  CLASSIC-QML-Dir.spec  CLASSIC-QML.spec  CLASSIC-TUI.spec  CLASSIC-Test.spec  CLASSIC.spec  CLASSIC_Interface.py  CLASSIC_Interface2.py  CLASSIC_Interface_QML.py  CLASSIC_Main.py  CLASSIC_ScanGame.py  CLASSIC_ScanLogs.py  CLASSIC_TUI.py  CLAUDE.md  CONTEXT.md  Cargo.toml  FFI_OPTIMIZATION_ANALYSIS.md  FFI_OPTIMIZATION_EXAMPLES.md  GEMINI.md  INFRASTRUCTURE_SETUP_SUMMARY.md  LICENSE.md  MANIFEST.in  PATHLIKE_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  PHASE1_COMPLETION_SUMMARY.md  PYRIGHT_ISSUES_SUMMARY.md  README.md  RUST_BUILD_LOCAL.md  (+67 more)
ClassicLib-rs/: Cargo.toml  benchmark-config.yaml  coverage_report.ps1  validate_stubs.py
ClassicLib-rs/python-bindings/: BINDING_AUDIT_CRITERIA.md
classic-cli/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  Cargo.toml  Format-Cpp.ps1  build_cli.ps1  test_cli.ps1  vcpkg.json
classic-cli/benches/: cli_benchmarks.rs
classic-cli/src/: app_update.cpp  app_update.h  args.rs  cli_args.cpp  cli_args.h  config.rs  error.rs  executor.rs  lib.rs  main.cpp  main.rs  output.rs  progress.cpp  progress.h  report_writer.cpp  report_writer.h  scan_run_cli.cpp  scan_run_cli.h  scanner.cpp  scanner.h  thread_pool.cpp  thread_pool.h  user_settings_action.cpp  user_settings_action.h  yaml_update.cpp  yaml_update.h
classic-cli/tests/: integration_tests.rs  memory_tests.rs  scan_run_fixture_config.h.in  test_app_update.cpp  test_app_update_wiring.cpp  test_cli_args.cpp  test_progress.cpp  test_scan_run_contract.cpp  test_scanner.cpp  test_user_settings_action.cpp  test_yaml_update.cpp
classic-config-core/: Cargo.toml
classic-config-core/src/: config.rs  lib.rs  yamldata.rs
classic-config-py/: Cargo.toml  classic_config.pyi
classic-config-py/src/: lib.rs
classic-core/: Cargo.toml  README.md  classic_core.pyi  test_segment_extraction.py
classic-core/src/: lib.rs
classic-core/tests/: test_database_pool.rs  test_patterns.rs  test_record_scanner.rs  test_report.rs
classic-database/: Cargo.toml  classic_database.pyi
classic-database-py/: Cargo.toml  classic_database.pyi
classic-database-py/src/: lib.rs  pool.rs
classic-database/src/: lib.rs
classic-file-io/: Cargo.toml  classic_file_io.pyi
classic-file-io-core/: Cargo.toml
classic-file-io-core/src/: core.rs  dds.rs  encoding.rs  error.rs  lib.rs  log_collection.rs
classic-file-io-py/: Cargo.toml  classic_file_io.pyi
classic-file-io-py/classic-file-io/: Cargo.toml
classic-file-io-py/src/: core.rs  dds.rs  encoding.rs  lib.rs  log_collector.rs
classic-file-io/src/: core.rs  encoding.rs  lib.rs
classic-file-io/tests/: test_file_io.rs
classic-gui/: .clang-format  CMakeLists.txt  CMakePresets.json  Format-Cpp.ps1  build_gui.ps1  compile_commands.json  vcpkg.json  verify_qt_resolution.ps1
classic-gui/cmake/: ClassicGuiQt.cmake
classic-gui/install-clang-cl/: qt.conf
classic-gui/resources/: resources.qrc
classic-gui/src/: CMakeLists.txt  classic_gui_icon.rc.in  main.cpp
classic-gui/tests/: CMakeLists.txt  test_gamepathutils.cpp  test_gamesetupusersettings.cpp  test_guiusersettings.cpp  test_mainwindow_geometry.cpp  test_markdownviewer.cpp  test_reportlistwidget.cpp  test_reportmetadatawidget.cpp  test_resultscontroller.cpp  test_scan_progress_model.cpp  test_scan_settings_wiring.cpp  test_scanrequestbuilder.cpp  test_scanrunpresentation.cpp  test_scanworker_batch_result_ordering.cpp  test_scanworker_cancellation.cpp  test_settingsdialog_behavior.cpp  test_signalhub.cpp  test_threadmanager.cpp  test_yaml_update_bridge.cpp  test_yaml_update_wiring.cpp
classic-message-core/: Cargo.toml
classic-message-core/src/: enums.rs  formatter.rs  lib.rs  message.rs
classic-registry-py/: Cargo.toml
classic-rust/: Cargo.toml  build_output.txt  pyproject.toml
classic-rust/src/: lib.rs
classic-rust/tests/: test_database_pool.rs  test_file_io.rs  test_formid.rs  test_mod_detector.rs  test_parser.rs  test_plugin_analyzer.rs  test_utils.rs  test_yaml.rs
classic-scanlog/: Cargo.toml  classic_scanlog.pyi
classic-scanlog-core/: Cargo.toml
classic-scanlog-core/src/: error.rs  fcx_handler.rs  formid.rs  formid_analyzer.rs  gpu_detector.rs  lib.rs  mod_detector.rs  orchestrator.rs  papyrus.rs  parser.rs  patterns.rs  plugin_analyzer.rs  record_scanner.rs  report.rs  settings_validator.rs  suspect_scanner.rs
classic-scanlog-py/: Cargo.toml  classic_scanlog.pyi
classic-scanlog-py/src/: fcx_handler.rs  formid.rs  formid_analyzer.rs  gpu_detector.rs  lib.rs  mod_detector.rs  orchestrator.rs  parser.rs  patterns.rs  plugin_analyzer.rs  record_scanner.rs  report.rs  settings_validator.rs  suspect_scanner.rs
classic-scanlog/src/: fcx_handler.rs  formid.rs  formid_analyzer.rs  gpu_detector.rs  lib.rs  mod.rs  orchestrator.rs  settings_validator.rs  suspect_scanner.rs
classic-scanlog/tests/: test_formid.rs  test_mod_detector.rs  test_parser.rs  test_plugin_analyzer.rs  test_record_scanner.rs  test_report.rs
classic-shared/: Cargo.toml  classic_shared.pyi
classic-shared-core/: Cargo.toml
classic-shared-core/benches/: performance_benchmarks.rs  string_benchmarks.rs
classic-shared-core/src/: async_bridge.rs  errors.rs  lib.rs  path_core.rs  performance_core.rs  strings_core.rs
classic-shared-core/tests/: test_path_lru.rs  test_rolling_stats.rs
classic-shared/src/: async_bridge.rs  errors.rs  lib.rs  path.rs  performance.rs  strings.rs
classic-shared/tests/: test_utils.rs
classic-tui/: Cargo.toml
classic-tui/benches/: tui_benchmarks.rs
classic-tui/src/: app.rs  events.rs  lib.rs  (+1 more)
classic-yaml/: Cargo.toml  classic_yaml.pyi
classic-yaml-core/: Cargo.toml
classic-yaml-py/: Cargo.toml  classic_yaml.pyi
config-core/: Cargo.toml  classic_config.pyi  pyproject.toml
python-bindings/: pyproject.toml
(+4989 files in other folders)
