[workspace]
members = [
    # Foundation
    "foundation/classic-shared-core",
    "foundation/classic-shared-py",
    # Business Logic (Pure Rust - no PyO3)
    "business-logic/classic-database-core",
    "business-logic/classic-file-io-core",
    "business-logic/classic-scanlog-core",
    "business-logic/classic-config-core",
    "business-logic/classic-scangame-core",
    # Phase 1 - Core Infrastructure (Business Logic)
    "business-logic/classic-registry-core",
    "business-logic/classic-perf-core",
    "business-logic/classic-settings-core",
    "business-logic/classic-message-core",
    # Phase 2 - Path Management (Business Logic)
    "business-logic/classic-path-core",
    "business-logic/classic-version-core",
    "business-logic/classic-resource-core",
    "business-logic/classic-xse-core",
    "business-logic/classic-web-core",
    # Phase 5 - Application Coordination (Business Logic)
    "business-logic/classic-update-core",
    # Version Registry (Game version detection and matching)
    "business-logic/classic-version-registry-core",
    # Python Bindings (PyO3 adapters)
    "python-bindings/classic-database-py",
    "python-bindings/classic-file-io-py",
    "python-bindings/classic-scanlog-py",
    "python-bindings/classic-config-py",
    "python-bindings/classic-scangame-py",
    # Phase 1 - Core Infrastructure (Python Bindings)
    "python-bindings/classic-registry-py",
    "python-bindings/classic-perf-py",
    "python-bindings/classic-settings-py",
    "python-bindings/classic-message-py",
    # Phase 2 - Path Management (Python Bindings)
    "python-bindings/classic-path-py",
    # Phase 4 - Constants and Utilities (Python Bindings)
    "python-bindings/classic-version-py",
    "python-bindings/classic-resource-py",
    "python-bindings/classic-xse-py",
    "python-bindings/classic-web-py",
    # Phase 5 - Application Coordination (Python Bindings)
    "python-bindings/classic-update-py",
    # Version Registry (Python Bindings)
    "python-bindings/classic-version-registry-py",
    # Node.js/Bun Bindings (NAPI-RS adapters)
    "node-bindings/classic-node",
    # UI Applications
    "ui-applications/classic-tui",
    # C++ Bindings (CXX FFI adapters)
    "cpp-bindings/classic-cpp-bridge",
]
resolver = "2"

[workspace.dependencies]
# PyO3 bindings
pyo3 = { version = "0.28.3", features = ["abi3-py312"] }
pyo3-async-runtimes = { version = "0.28.0" }

# Async runtime (ONE RUNTIME RULE)
tokio = { version = "1.52.0", features = ["full"] }
futures = "0.3.32"

# Performance
dashmap = "6.1"
parking_lot = "0.12.5"
rayon = "1.12.0"
crossbeam = "0.8.4"
num_cpus = "1.17.0"

# YAML
yaml-rust2 = "0.11.0"

# Strings & errors
string_cache = "0.9.0"
smartstring = "1.0.1"
lasso = { version = "0.7.3", features = [
    "multi-threaded",
] } # Fast string interning (optimization 3.1)
thiserror = "2.0.18"
anyhow = "1.0.102"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# File I/O
encoding_rs = "0.8.35"
chardetng = "1.0.0"   # Character encoding detection (Phase 5 - PapyrusLog)
memmap2 = "0.9.10"
walkdir = "2.5.0"
ddsfile = "0.6.0"
dirs = "6.0.0"
directories = "6.0.0"  # Cross-platform config/data directories

# BA2 Archive support
ba2 = "3.0.1"

# Parsing
regex = "1.12.3"
memchr = "2.8.0"
aho-corasick = "1.1.4"
phf = { version = "0.13.1", features = ["macros"] }

# Alternative allocator (Phase 16 optimization - optional)
mimalloc = { version = "0.1.48", default-features = false }

# Ordered collections
indexmap = "2.14"  # Preserves insertion order (required for YAML key order parity)

# Caching
lru = "0.17.0"
linked-hash-map = "0.5.6"
quick_cache = "0.6.21"     # Lock-free concurrent cache (optimization 1.3)
rustc-hash = "2.1.2"      # Fast hasher for short strings (optimization 1.2)

# Hashing
xxhash-rust = { version = "0.8.15", features = [
    "xxh3",
] } # Fast non-cryptographic hash (optimization 4.1)
sha2 = "0.11.0" # Cryptographic hashing (SHA256 for file comparison)

# Text processing
strsim = "0.11.1"      # String similarity algorithms
configparser = "3.1.0" # INI file parsing

# Version parsing
semver = "1.0.28" # Semantic versioning for crashgen version comparison
pelite = "0.10.0" # PE file parsing for version extraction

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Network (Phase 5 - Update system)
reqwest = { version = "0.13.2", features = ["json"] } # Async HTTP client
scraper = "0.26.0"                                    # HTML parsing

# Logging
log = "0.4.29"
env_logger = "0.11.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-appender = "0.2.4"

# C++ FFI (CXX)
cxx = "1.0.194"
cxx-build = "1.0.194"

# Platform-specific
winreg = "0.56.0"

# Markdown
pulldown-cmark = { version = "0.13.3", default-features = false }

# Utilities
tokio-util = "0.7.18"

# Testing
tempfile = "3.27.0"
serial_test = "3.4.0"

[workspace.lints.rust]
deprecated = "deny"
unused = "deny"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
