[project]
name = "classic"
version = "8.0.0"
requires-python = ">=3.12,<3.14"

[tool.poetry]
name = "classic"
version = "7.35.0"
description = "Crash Log Auto-Scanner for Buffout 4."
authors = ["Poet", "evildarkarchon", "wxMichael"]
readme = "README.md"
package-mode = true
packages = [
    { include = "classic", from = "src" },
    { include = "ClassicLib" },
    { include = "CLASSIC_Interface.py" },
    { include = "CLASSIC_TUI.py" },
    { include = "CLASSIC_ScanLogs.py" },
    { include = "CLASSIC_ScanGame.py" }
]
include = [
    "CLASSIC Data/**/*.yaml",
    "CLASSIC Data/**/*.yml",
    "CLASSIC Data/**/*.db",
    "CLASSIC Data/**/*.txt",
    "CLASSIC Data/**/*.md",
    "docs/*.md",
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
beautifulsoup4 = ">=4.12.3"
requests = ">=2.32.3"
ruamel-yaml = ">=0.18.6"
tomlkit = ">=0.13.2"
urllib3 = ">=2.2.3"
chardet = ">=5.2.0"
aiohttp = ">=3.10.10"
regex = ">=2024.9.11"
iniparse = ">=0.5"
typed-argument-parser = ">=1.10.1"
packaging = ">=25.0"
aiofiles = ">=24.1.0"
pytest = ">=8.4.0"
aiosqlite = ">=0.21.0"
pefile = "<2024.8.26"
pyside6 = ">=6.8.0"  # GUI framework - required for primary interface
textual = { version = ">=5.3.0", optional = true }  # Optional TUI mode
tqdm = { version = ">=4.67.1", optional = true }    # Optional CLI progress
pywin32 = { version = ">=310", optional = true, markers = "sys_platform == 'win32'" }
appdirs = ">=1.4.4"
setuptools = ">=80.9.0"
markdown2 = "^2.5.4"

[tool.poetry.scripts]
classic = "classic.gui:main"        # Primary GUI entry point
classic-gui = "classic.gui:main"    # Explicit GUI alias
classic-cli = "classic.cli:main"    # Command-line interface
classic-tui = "classic.tui:main"    # Terminal UI
classic-scan = "classic.scan:main"  # Direct scanner access

[tool.poetry.extras]
tui = ["textual"]       # Terminal UI mode
cli = ["tqdm"]          # CLI with progress bars
windows = ["pywin32"]   # Windows-specific features
full = ["textual", "tqdm", "pywin32"]  # All optional features
all = ["textual", "tqdm", "pywin32"]   # Alias for full


[tool.poetry.group.dev.dependencies]
mypy = ">=1.12.0"
ruff = ">=0.11.0"
types-beautifulsoup4 = ">=4.12.0.20240907"
types-regex = ">=2024.11.6.20250403"
types-requests = ">=2.32.0.20241016"
pyinstaller = ">=6.11.0"
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
pytest-asyncio = ">=0.24.0"
anyio = ">=4.6.2.post1"
pyinstaller-hooks-contrib = ">=2025.0"
pytest-qt = ">=4.4.0"
psutil = ">=7.0.0"
pytest-xdist = ">=3.8.0"
pytest-textual-snapshot = ">=1.1.0"
pytest-timeout = ">=2.4"
textual-dev = ">=1.7.0"
pre-commit = ">=4.3.0"
pylint = "^3.3.8"


[tool.poetry.requires-plugins]
poetry-plugin-up = ">=0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
disable_error_code = [
	"import-untyped",
	"index",          # Redundant with Pyright reportIndexIssue
	"name-defined",   # Redundant with Ruff F821
	"operator",       # Redundant with Pyright reportOperatorIssue
	"attr-defined",	 # Redundant with reportAttributeAccessIssue
	"no-redef",
	"empty-body",
	"annotation-unchecked"
]

[tool.pyright]
typeCheckingMode = "standard"
extraPaths = [".", "./ClassicLib", "./tests"]
reportArgumentType = false         # Redundant with Mypy arg-type
reportAssignmentType = false       # Redundant with Mypy assignment
reportMissingParameterType = false # Redundant with Ruff ANN001
reportReturnType = false           # Redundant with Mypy return-type
reportUndefinedVariable = false    # Redundant with Ruff F821
reportUnusedImport = false         # Redundant with Ruff F401
reportAttributeAccessIssue = "warning" # Messes with my docstrings, but could be useful elsewhere

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
ignore = [
	"ANN401",  # Allow use of typing.Any
	"E501",    # Duplicate of B950 line-too-long
	"E722",    # Duplicate of B001 bare-except
	"PLR0904", # too-many-public-methods
	"PLR0911", # too-many-return-statements
	# "PLR0912", # too-many-branches
	"PLR0913",
	"PLR0914", # too-many-local-variables
	"PLR0915", # too-many-statements
	"PLR0917",
	"TRY003",  # Allow custom exception messages
	"TRY400",  # Use `logging.exception` instead of `logging.error`
	"PLR2004", # Allow magic values in comparisons
	"PLW2901", # Allow overwriting loop variables
	"SLF001",
	"PLC0415",
	"DOC502",
	"Q000"
]

extend-select = [
	"A",     # Builtin Shadowing
	"ANN",   # Type Annotations
	"ASYNC", # Async Suggestions
	"ARG",   # Unused Arguments
	"B",     # Bugs/Design Problems
	"BLE",   # Blind Except
	"C4",    # Comprehensions
	"FA",    # Future Annotations
	"FLY",   # F-Strings
	"FURB",  # Modernization
	"I",     # Import Sorting
	"ICN",   # Import Naming Conventions
	"ISC",   # Implicit String Concatenation
	"LOG",   # Logging
	"PERF",  # Performance Anti-Patterns
	"PIE",   # Misc Lints
	"PL",    # Pylint
	"PT",    # PyTest
	"PTH",   # Prefer Pathlib
	"RET",   # Return
	"RSE",   # Raise
	"RUF",   # Ruff
	"SIM",   # Simplify
	"SLF",   # Self
	"TCH",   # Type Checking
	"TID",   # Tidy Imports
	"TRY",   # Exception Anti-Patterns
	"UP",    # pyupgrade (New Syntax Suggestions)
	"FIX",
	"FA",
	"Q",
	"TID252",
	"DOC",
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D105",
	"D106",
	"D107",
	"D200",
	"D300",
	"D301",
	"D414",
	"D417",
	"D418",
	"D419"

	# "D",     # pydocstyle
	# "C901",  # Complex Structures
	# "COM",   # Commas
	# "DTZ",   # Unsafe/Naive Datetimes
	# "EM",    # Exception Messages
	# "FBT",   # Boolean Traps
	# "G",     # Logging Formatting
	# "N",     # PEP8 Naming Conventions
	# "PGH",   # PyGrep Hooks
	# "PYI",   # Stub Files
	# "S",     # Security Testing
]
[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "*/tests/*",
    "*/_internal/*",
    "*/Release/*",
    "*/CLASSIC Backup/*",
    "*/Crash Logs/*",
    "*/Examples/*",
    "*/performance_baselines/*",
    "install_requirements.py",
    "setup.py"
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "Cover"
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.platform",
    "if platform.system",
    "@app.route",
    "app.run",
    "logger\\.debug",
    "logger\\.trace"
]

[tool.coverage.html]
directory = "htmlcov"
title = "CLASSIC Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"
markers = [
    "unit: marks tests as unit tests (fast, isolated)",
    "integration: marks tests as integration tests (slower, system dependencies)",
    "slow: marks tests as slow running (>1 second)",
    "performance: marks tests as performance regression tests",
    "gui: marks tests as GUI-dependent tests requiring Qt",
    "file_io: marks tests that perform file I/O operations",
    "async_test: marks tests that use async/await patterns"
]

[tool.black]
line-length = 140
target-version = ['py312', 'py313']

[tool.pyrefly]
use_untyped_imports = true
