[project]
name = "classic"
version = "8.0.0"
description = "Crash Log Auto-Scanner for Buffout 4."
authors = [
    { name = "Poet" },
    { name = "evildarkarchon" },
    { name = "wxMichael" }
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12,<3.15"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "ruamel-yaml>=0.18.6",
    "tomlkit>=0.13.2",
    "urllib3>=2.2.3",
    "chardet>=5.2.0",
    "aiohttp>=3.10.10",
    "regex>=2025.11.3",
    "iniparse>=0.5",
    "typed-argument-parser>=1.10.1",
    "packaging>=25.0",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.21.0",
    "pefile<2024.8.26",
    "pyside6>=6.8.0",
    "appdirs>=1.4.4",
    "setuptools>=80.9.0",
    "markdown2>=2.5.4",
    "qasync>=0.28.0",
    "maturin>=1.9.4,<2.0",
    "pillow>=12.0.0",
    "pyffi>=2.2.2",
    "pyperclip>=1.11.0",
]

[project.optional-dependencies]
cli = ["tqdm>=4.67.1"]
windows = ["pywin32>=310; sys_platform == 'win32'"]
full = ["tqdm>=4.67.1", "pywin32>=310; sys_platform == 'win32'"]
all = ["tqdm>=4.67.1", "pywin32>=310; sys_platform == 'win32'"]

[project.scripts]
# Entry points are in the root directory, not in src/
classic = "CLASSIC_Interface:main"
classic-gui = "CLASSIC_Interface:main"
classic-cli = "CLASSIC_ScanLogs:main"
classic-scan = "CLASSIC_ScanGame:main"

[dependency-groups]
dev = [
    "mypy>=1.12.0",
    "ruff>=0.11.0",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-regex>=2025.11.3.20251106",
    "types-requests>=2.32.0.20241016",
    "pyinstaller>=6.11.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.6.2.post1",
    "pyinstaller>=6.16.0",
    "pyinstaller-hooks-contrib>=2025.0",
    "pytest-qt>=4.4.0",
    "psutil>=7.0.0",
    "pytest-timeout>=2.4",
    "pylint>=4.0.4",
    "pyright>=1.1.405",
    "hypothesis>=6.140.2",
    "pytest-benchmark>=5.2.3",
    "python-memory-profiler>=0.4.4",
    "scipy>=1.16.3",
    "debugpy>=1.8.19",
]

[tool.uv]
# Package configuration for uv
package = true
managed = true

[tool.uv.sources]
classic = { path = ".", editable = true }

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
disable_error_code = [
	"import-untyped",
	"index",          # Redundant with Pyright reportIndexIssue
	"name-defined",   # Redundant with Ruff F821
	"operator",       # Redundant with Pyright reportOperatorIssue
	"attr-defined",	 # Redundant with reportAttributeAccessIssue
	"no-redef",
	"empty-body",
	"annotation-unchecked"
]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = [".", "./ClassicLib", "./tests"]
reportUnknownMemberType = false
reportWildcardImportFromLibrary = false
reportAssignmentType = false            # Redundant with Mypy assignment
reportMissingParameterType = false      # Redundant with Ruff ANN001
reportReturnType = false                # Redundant with Mypy return-type
reportUndefinedVariable = false         # Redundant with Ruff F821
reportUnusedImport = false              # Redundant with Ruff F401
reportUnusedVariable = false            # Redundant with Ruff F841
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUntypedFunctionDecorator = "warning"
reportPrivateUsage = "warning"
exclude = [ "**/_internal", "**/dist", "**/build", ".venv", "**/Release", "**/PySide6" ]
ignore = [ "**/_internal", "**/dist", "**/build", ".venv", "**/Release", "**/PySide6" ]

[tool.basedpyright]
typeCheckingMode = "strict"
extraPaths = [".", "./ClassicLib", "./tests"]
reportUnknownMemberType = false
reportWildcardImportFromLibrary = false
reportAssignmentType = false            # Redundant with Mypy assignment
reportMissingParameterType = false      # Redundant with Ruff ANN001
reportReturnType = false                # Redundant with Mypy return-type
reportUndefinedVariable = false         # Redundant with Ruff F821
reportUnusedImport = false              # Redundant with Ruff F401
reportUnusedVariable = false            # Redundant with Ruff F841
reportUnknownLambdaType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUntypedFunctionDecorator = "warning"
reportPrivateUsage = "warning"
exclude = [ "**/_internal/**/*.py", "**/dist/**/*.py", "**/build/**/*.py", ".venv/**/*.py", "**/Release/**/*.py", "**/PySide6/**/*.py" ]
ignore = [ "**/_internal/**/*.py", "**/dist/**/*.py", "**/build/**/*.py", ".venv/**/*.py", "**/Release/**/*.py", "**/PySide6/**/*.py" ]

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
ignore = [
	"ANN401",  # Allow use of typing.Any
	"D102",    # Missing docstring in public method (Protocol stubs)
	"D105",    # Missing docstring in magic method
	"D107",    # Missing docstring in __init__
	"D205",    # Blank line between summary and description (many multi-line summaries)
    "D211",
    "D213",
    "D203",
	"E501",    # Duplicate of B950 line-too-long
	"E722",    # Duplicate of B001 bare-except
	"PLR0904", # too-many-public-methods
	"PLR0911", # too-many-return-statements
	# "PLR0912", # too-many-branches
	"PLR0913",
	"PLR0914", # too-many-local-variables
	"PLR0915", # too-many-statements
	"PLR0917",
	"TRY003",  # Allow custom exception messages
	"TRY400",  # Use `logging.exception` instead of `logging.error`
	"PLR2004", # Allow magic values in comparisons
	"PLW2901", # Allow overwriting loop variables
	"SLF001",
	"PLC0415",
	"DOC502",
	"Q000",
	"RUF022",
    "RUF067",
]

extend-select = [
	"A",     # Builtin Shadowing
	"ANN",   # Type Annotations
	"ASYNC", # Async Suggestions
	"ARG",   # Unused Arguments
	"B",     # Bugs/Design Problems
	"BLE",   # Blind Except
	"C4",    # Comprehensions
	"FA",    # Future Annotations
	"FLY",   # F-Strings
	"FURB",  # Modernization
	"I",     # Import Sorting
	"ICN",   # Import Naming Conventions
	"ISC",   # Implicit String Concatenation
	"LOG",   # Logging
	"PERF",  # Performance Anti-Patterns
	"PIE",   # Misc Lints
	"PL",    # Pylint
	"PT",    # PyTest
	"PTH",   # Prefer Pathlib
	"RET",   # Return
	"RSE",   # Raise
	"RUF",   # Ruff
	"SIM",   # Simplify
	"SLF",   # Self
	"TCH",   # Type Checking
	"TID",   # Tidy Imports
	"TRY",   # Exception Anti-Patterns
	"UP",    # pyupgrade (New Syntax Suggestions)
	"FIX",
	"FA",
	"Q",
	"TID252",

	"D",     # pydocstyle
	# "C901",  # Complex Structures
	# "COM",   # Commas
	# "DTZ",   # Unsafe/Naive Datetimes
	# "EM",    # Exception Messages
	# "FBT",   # Boolean Traps
	# "G",     # Logging Formatting
	# "N",     # PEP8 Naming Conventions
	# "PGH",   # PyGrep Hooks
	# "PYI",   # Stub Files
	# "S",     # Security Testing
]
[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Annotations - tests don't need strict typing
    "ANN",
    # Arguments - pytest fixtures cause false positives
    "ARG",
    # Async - test patterns differ from production
    "ASYNC",
    # Bugbear - tests intentionally use unusual patterns
    "B",
    # Blind exceptions - tests need flexible error handling
    "BLE001",
    # Comprehensions - test clarity over brevity
    "C4",
    # Module imports - tests have different import patterns
    "E402",
    # Lambda - tests use lambdas for mocking
    "E731",
    # Variable names - tests may use short names intentionally
    "E741",
    # Unused imports/variables - common in test fixtures
    "F401", "F405", "F601", "F811", "F841",
    # FURB - test clarity over micro-optimizations
    "FURB",
    # Logging - tests may use root logger
    "LOG",
    # Performance - tests prioritize clarity
    "PERF",
    # PIE - misc lints, tests have different patterns
    "PIE",
    # Pylint complexity - tests can be complex
    "PLC", "PLR", "PLW",
    # Pytest - allow flexible test patterns
    "PT",
    # Return statements - tests have different patterns
    "RET",
    # Raise without args - tests may re-raise
    "RSE102",
    # RUF - various Ruff-specific rules
    "RUF",
    # Simplify - test clarity over brevity
    "SIM",
    # Type checking imports - tests don't need optimization
    "TC",
    # Tidy imports - tests may have relative imports
    "TID252",
    # Exception patterns - tests intentionally test error handling
    "TRY",
    # Upgrade suggestions - not critical for tests
    "UP",
    "D"
]
"tests/conftest.py" = ["ANN001", "ANN201", "ANN202"]
"tests/fixtures/**/*.py" = ["ANN001", "ANN201", "ANN202"]
"install_requirements.py" = ["PLR0912"]  # Utility script with many branches
"tools/**/*.py" = [
    "PLR6301",  # Method could be static - dev tools
    "ANN001",   # Missing type annotation for argument
    "ANN002",   # Missing type annotation for *args
    "ANN003",   # Missing type annotation for **kwargs
    "ANN201",   # Missing return type annotation
    "ANN202",   # Missing return type for private function
    "ANN204",   # Missing return type for special method
    "PLR1702",  # Too many nested blocks - complex analysis tools
    "PLR0912",  # Too many branches - complex analysis tools
    "PLR1714",  # Merge multiple comparisons
    "PLR6201",  # Use set literal for membership - dev tools
    "PERF401",  # Use list comprehension - dev tools, clarity over perf
    "BLE001",   # Blind exception - dev tools need robust error handling
    "B905",     # zip without strict - dev tools
    "SIM105",   # contextlib.suppress - dev tools
    "SIM108",   # Ternary operator - dev tools, clarity over brevity
    "TC003",    # Type checking imports
    "RUF013",   # Implicit Optional
    "RET504",   # Unnecessary assignment
    "RUF059",   # Unused variable
    "RUF100",   # Unused noqa
    "F401",     # Unused import - conditional imports in dev tools
    "ARG002",   # Unused argument - dev tool APIs
    "TRY300",   # Return in try block - dev tools
    "PLW1514",  # Missing encoding - dev tools
    "FURB171",  # Single-item membership test - dev tools
    "FURB122",  # f.write in loop - dev tools
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/build/*",
    "*/dist/*",
    "*/tests/*",
    "*/_internal/*",
    "*/Release/*",
    "*/CLASSIC Backup/*",
    "*/Crash Logs/*",
    "*/Examples/*",
    "*/performance_baselines/*",
    "install_requirements.py",
    "setup.py",
    # Build and migration scripts (not part of runtime code)
    "migrate_to_uv.py",
    "pyinstaller_rust_helper.py",
    # Experimental QML interface (not the primary interface)
    "CLASSIC_Interface_QML.py",
    # PySide6 generated files and internal modules
    "pyscript",
    "shibokensupport/*",
    "signature_bootstrap.py"
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "Cover"
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if sys.platform",
    "if platform.system",
    "@app.route",
    "app.run",
    "logger\\.debug",
    "logger\\.trace"
]

[tool.coverage.html]
directory = "htmlcov"
title = "CLASSIC Test Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 300
addopts = "--cov --cov-report=lcov:lcov.info --cov-report=term"
markers = [
    "unit: Unit tests that test a single function or class",
    "integration: Tests that test the integration of multiple components",
    "slow: Tests that take a long time to run",
    "thread: Tests that focus on thread safety and concurrency",
    "asyncio: Async tests using pytest-asyncio",
    "performance: Performance and benchmark tests",
    "ui: User interface and GUI-related tests",
    "gui: marks tests as GUI-dependent tests requiring Qt",
    "file_io: marks tests that perform file I/O operations",
    "async_test: marks tests that use async/await patterns",
    "network: Tests that require network connectivity",
    "error_handling: Tests focused on error handling and edge cases",
    "cross_platform: Tests verifying cross-platform compatibility",
    "e2e: End-to-end integration tests",
    "regression: Regression tests for previously fixed bugs",
    "rust: Tests that require or validate Rust integration",
    "benchmark: Performance benchmark tests for measuring execution times",
    "real_data: Tests that use real data files for validation",
    "component: Tests for individual component functionality",
    "filesystem: Tests that involve filesystem operations and permissions",
    "edge_cases: Tests for edge cases and boundary conditions",
    "stress: Stress tests for high-load scenarios",
    "concurrency: Tests for concurrent and parallel operations",
    "error_recovery: Tests for error recovery and resilience",
]

[tool.black]
line-length = 140
target-version = ['py312', 'py313']

[tool.pyrefly]
use_untyped_imports = true
